
    >>> browser.open('http://localhost/news/daily?date=2009-10-09')
    >>> printEmails()
    ['admin@ututi.lt']
    Ututi news: 2 new pages
    <BLANKLINE>
    Matematinė analizė (http://localhost/subject/vu/mat_analize)
    <BLANKLINE>
    - Page How to be awesome! (http://localhost/subject/vu/mat_analize/page/3) was created.
    - Page How to be more awesome! (http://localhost/subject/vu/mat_analize/page/5) was created.
    <BLANKLINE>
    If you want to stop getting these emails - you can change your subscription settings in your watched subject page (http://localhost/profile/subjects).
    <BLANKLINE>
    ['user@ututi.lt']
    Ututi news: 2 new files and 2 new pages
    <BLANKLINE>
    Matematinė analizė (http://localhost/subject/vu/mat_analize)
    <BLANKLINE>
    - Page How to be awesome! (http://localhost/subject/vu/mat_analize/page/3) was created.
    - Page How to be awesome! (http://localhost/subject/vu/mat_analize/page/3) was updated.
    - File f1.txt (http://localhost/subject/vu/mat_analize/file/9/get) was uploaded.
    - File f2.txt (http://localhost/subject/vu/mat_analize/file/10/get) was uploaded.
    <BLANKLINE>
    If you want to stop getting these emails - you can change your subscription settings in your watched subject page (http://localhost/profile/subjects).
    <BLANKLINE>

    >>> mail_queue[:] = []

    >>> from ututi.lib import gg
    >>> from pprint import pprint
    >>> for msg in gg.sent_messages: print msg
    (133465L, u'A new file has been uploaded for the Matematin\u0117 analiz\u0117:')
    (133465L, u'f1.txt (http://localhost:80/subject/vu/mat_analize/file/9/get)')
    (564321L, u'A new file has been uploaded for the Matematin\u0117 analiz\u0117:')
    (564321L, u'f1.txt (http://localhost:80/subject/vu/mat_analize/file/9/get)')
    (564321L, u'A new file has been uploaded for the Matematin\u0117 analiz\u0117:')
    (564321L, u'f2.txt (http://localhost:80/subject/vu/mat_analize/file/10/get)')

    >>> gg.sent_messages[:] = []